# memo

./: .gitignore  CLAUDE.md  README.md  start.ps1  start_windows.ps1
docs/: chat-fixing-plan.md  code-review-stage0-stage1.md  code-review-stage2-hardening.md  code-review-stage2.md  code-review-stage3-stage4.md  implementation-plan.md  memo-components.md  memo-overview.md  memo-tech-spec.md  memo-use-cases.md  polishing-plan.md
src/backend/: pyproject.toml  requirements.txt
src/backend/data/: memo.db-shm  memo.db-wal
src/backend/memo/: chroma.py  main.py  settings.py
src/backend/memo/api/: chats.py  fs.py  generate.py  health.py  index.py  models.py  organize.py
src/backend/memo/db/: models.py  session.py
src/backend/memo/services/: chat_store.py  doc_generator.py  document_loader.py  fs.py  indexer.py  ollama_client.py  organizer.py  rag.py  watcher.py
src/backend/tests/unit/: conftest.py  test_chat_store.py  test_doc_generator.py  test_document_loader.py  test_fs.py  test_indexer.py  test_ollama_client.py  test_organizer.py  test_rag.py  test_watcher.py
src/frontend/: index.html  package-lock.json  package.json
src/frontend/src/: App.css  App.tsx  index.css
src/frontend/src-tauri/: Cargo.toml  tauri.conf.json
src/frontend/src-tauri/capabilities/: default.json
src/frontend/src-tauri/src/: lib.rs  main.rs
src/frontend/src/api/: chat.ts  client.ts  fs.ts  generate.ts  index.ts  organize.ts
src/frontend/src/components/Chat/: Chat.css  Chat.tsx
src/frontend/src/ipc/: backend.ts
src/frontend/src/store/: useAppStore.ts
(+13 files in other folders)
