[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "memo"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "pydantic-settings>=2.2",
    "chromadb>=0.5",
    "pymupdf>=1.24",
    "python-docx>=1.1",
    "sqlalchemy>=2.0",
    "watchdog>=4.0",
    "scikit-learn>=1.5",
    "charset-normalizer>=3.0",
]

[project.optional-dependencies]
stage4 = [
    "scikit-learn>=1.5",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[tool.setuptools.packages.find]
include = ["memo*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
